# TP-Algo-1

./: CMakeLists.txt  analisisHabitacional  auxiliares.cpp  auxiliares.h  coverage.info  crearAnalisisCob.sh  definiciones.h  ejercicios.cpp  main.cpp
cobertura/: index-sort-f.html  index-sort-l.html  index.html
cobertura/7/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html
cobertura/7/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  index-sort-f.html  (+40 more)
cobertura/tpi/: Funciones_TPI.cpp.func-sort-c.html  Funciones_TPI.cpp.func.html  Funciones_TPI.cpp.gcov.html  auxiliares.cpp.func-sort-c.html  auxiliares.cpp.func.html  auxiliares.cpp.gcov.html  ejercicios.cpp.func-sort-c.html  ejercicios.cpp.func.html  ejercicios.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
codigoTPI_test++/: creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  indiceGiniTEST.cpp  ordenarRegionYCODUSUTEST.cpp
test/: corregirRegionTEST.cpp  creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  histHabitacionalTEST.cpp  indiceGiniTEST.cpp  laCasaEstaQuedandoChicaTEST.cpp  muestraHomogeneaTEST.cpp  ordenarRegionYCODUSUTEST.cpp
(+243 files in other folders)
